
Wed Jul 15 16:24:57 CEST 2009 Paolo Molaro <lupus@ximian.com>

	* mini-ppc.c: integrate most of Steven Munroe (<munroesj@us.ibm.com>)
	first patch at http://bugzilla.novell.com/show_bug.cgi?id=487846.

2009-07-14 Rodrigo Kumpera  <rkumpera@novell.com>

	* cpu-x86.md: Fix missing clobbering from trancendental simd
	ops.

	* cpu-amd64.md: Same.

2009-07-14 Jerry Maine <crashfourit@gmail.com>

	Contributed under the terms of the MIT/X11 license by
	Jerry Maine <crashfourit@gail.com>.

	* basic-simd.cs: Added tests for single and doulble indexers.

	* cpu-amd64.md: Added simd opcode information.

	* mini-amd64.c: Added IR to native simd generation code.
	Added simd register names and function that returns them.

	* mini-amd64.h: Added marcos to turn on simd code compilation in
	amd64. Added max simd register count marco. Added caller/callee
	register mask marcos. Added marcos to use simd register bank.

	* mini.h: Added helper marco for shufling dwords and simple
	floats.

2009-07-14  Zoltan Varga  <vargaz@gmail.com>

	* mini-llvm-cpp.cpp: Update to latest llvm SVN api.

	* Makefile.am (mono_LDADD): Pass LLVM_LDFLAGS to the linked.

	* unwind.c (mono_unwind_get_ops_from_fde): Make this return
	the length of the native code as well.

        * basic-simd.cs: Add a test for #521662.

Mon Jul 13 17:58:50 CEST 2009 Paolo Molaro <lupus@ximian.com>

	* mini-ppc.c: fixed bug introduced by Steven's TLS changes.

2009-07-13  Mark Probst  <mark.probst@gmail.com>

	* mini.c: Register function for getting the IP from a signal
	context with metadata.

2009-07-13  Zoltan Varga  <vargaz@gmail.com>

	* method-to-ir.c (mono_method_to_ir): When calling a gshared method,
	call a generic class init trampoline if needed. Fixes #519336.

	* generics.cs: Add a test.
	
2009-07-09  Mark Probst  <mark.probst@gmail.com>

	* method-to-ir.c: When doing a call which might be remote from
	shared generic code to other shared code with open type arguments,