@@ -1,4 +1,10 @@
 
+Wed Jul 15 17:20:27 CEST 2009 Paolo Molaro <lupus@ximian.com>
+
+	* mini-ppc.c: exploit multiple load/store units if available (rest of
+	the change from Steven Munroe (<munroesj@us.ibm.com>) first patch at 
+	http://bugzilla.novell.com/show_bug.cgi?id=487846).
+
 Wed Jul 15 16:24:57 CEST 2009 Paolo Molaro <lupus@ximian.com>
 
 	* mini-ppc.c: integrate most of Steven Munroe (<munroesj@us.ibm.com>)
